objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Point_of_Contact__c</fullName>
        <description>Name of the contact person on the business side that can help any questions, if the need arises</description>
        <inlineHelpText>Name of the contact person on the business side that can help any questions, if the need arises</inlineHelpText>
        <label>Business Point of Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Status_last_modified__c</fullName>
        <label>Date Status last modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Status__c</fullName>
        <description>Today minus the date the Status field was last modified</description>
        <formula>TODAY() - Date_Status_last_modified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Awaiting Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - IT Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - UAT Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Approved By Business - Pending Production Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Unable to Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete_Estimate__c</fullName>
        <inlineHelpText>Hours estimated to complete the request.</inlineHelpText>
        <label>Time to Complete Estimate (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To send an immediate email to the team for an expedited response. **Should only be used in emergency situations**</inlineHelpText>
        <label>Payment Recalculation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>